--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Not a PR Company</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       padding: 0;
       background-color: #0e0e0e;
       color: #e7dcc5;
-      font-family: 'Georgia', serif;
+      font-family: 'Inter', sans-serif;
       line-height: 1.6;
     }
     header {
@@ -18,23 +19,25 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 60px;
-      font-family: 'Arial', sans-serif;
       font-size: 14px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
     }
     nav a {
       color: #e7dcc5;
       text-decoration: none;
       margin-left: 30px;
-      letter-spacing: 1px;
     }
     .hero {
       text-align: center;
       padding: 150px 20px 80px;
     }
     .hero h1 {
+      font-family: 'Inter', sans-serif;
       font-size: 60px;
-      font-weight: bold;
+      font-weight: 700;
       margin: 0;
+      line-height: 1.1;
     }
     .hero p {
       font-size: 18px;
@@ -48,8 +51,9 @@
       color: #e7dcc5;
       text-decoration: none;
       letter-spacing: 1px;
-      font-family: 'Arial', sans-serif;
       font-size: 12px;
+      text-transform: uppercase;
+      font-family: 'Inter', sans-serif;
     }
     .section {
       padding: 100px 20px;
@@ -69,9 +73,15 @@
       margin: 20px;
     }
     .service h3 {
-      font-family: 'Georgia', serif;
+      font-family: 'Playfair Display', serif;
       font-size: 20px;
       margin-bottom: 10px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+    .service p {
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
     }
     .process {
       max-width: 700px;
@@ -79,9 +89,14 @@
       text-align: left;
     }
     .process h2 {
+      font-family: 'Playfair Display', serif;
       text-align: center;
       font-size: 36px;
       margin-bottom: 20px;
+    }
+    .process p, .phase p {
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
     }
     .phase {
       margin-bottom: 20px;
@@ -90,6 +105,7 @@
       text-align: center;
       font-style: italic;
       margin-top: 40px;
+      font-family: 'Inter', sans-serif;
     }
   </style>
 </head>
