--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
     }
     .hero {
       text-align: center;
-      padding: 150px 20px 80px;
+      padding: 250px 20px 180px; /* Increased top and bottom padding */
     }
     .hero h1 {
       font-family: 'Inter', sans-serif;
-      font-size: 60px;
+      font-size: 80px; /* Increased font size */
       font-weight: 700;
       margin: 0;
       line-height: 1.1;
     }
     .hero p {
-      font-size: 18px;
-      margin: 20px 0;
+      font-size: 20px; /* Slightly larger text */
+      margin: 30px 0;
     }
     .button {
       display: inline-block;
       border: 1px solid #e7dcc5;
-      padding: 10px 25px;
-      margin-top: 20px;
+      padding: 12px 30px;
+      margin-top: 30px;
       color: #e7dcc5;
       text-decoration: none;
       letter-spacing: 1px;
-      font-size: 12px;
+      font-size: 14px;
       text-transform: uppercase;
       font-family: 'Inter', sans-serif;
     }
